--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "ionic-firebase-starter",
+    "name": "warming-center",
     "version": "0.0.1",
-    "author": "Joseph P. Mohr",
+    "author": "Joseph P. Mohr & Bryan Adams",
     "homepage": "https://www.josephpmohr.com/",
     "private": true,
     "scripts": {
@@ -20,20 +20,10 @@
         "@angular/http": "5.0.3",
         "@angular/platform-browser": "5.0.3",
         "@angular/platform-browser-dynamic": "5.0.3",
-        "@ionic-native/camera": "4.3.3",
-        "@ionic-native/core": "4.4.0",
-        "@ionic-native/splash-screen": "4.4.0",
-        "@ionic-native/status-bar": "4.4.0",
         "@ionic/storage": "2.1.3",
         "@ngx-translate/core": "8.0.0",
         "@ngx-translate/http-loader": "^2.0.0",
         "angularfire2": "^5.0.0-rc.6",
-        "cordova-ios": "^4.5.4",
-        "cordova-plugin-device": "^2.0.1",
-        "cordova-plugin-ionic-keyboard": "^2.0.5",
-        "cordova-plugin-ionic-webview": "^1.1.16",
-        "cordova-plugin-splashscreen": "^5.0.2",
-        "cordova-plugin-whitelist": "^1.3.3",
         "firebase": "^4.11.0",
         "ionic-angular": "3.9.2",
         "ionicons": "3.0.0",
@@ -45,17 +35,5 @@
         "@ionic/app-scripts": "3.1.8",
         "typescript": "2.4.2"
     },
-    "description": "An Ionic starter project with Firebase",
-    "cordova": {
-        "plugins": {
-            "cordova-plugin-device": {},
-            "cordova-plugin-ionic-keyboard": {},
-            "cordova-plugin-ionic-webview": {},
-            "cordova-plugin-splashscreen": {},
-            "cordova-plugin-whitelist": {}
-        },
-        "platforms": [
-            "ios"
-        ]
-    }
+    "description": "Warming Center project with Firebase"
 }
